external-crates/move/crates/move-compiler/tests/move_2024/parser/enum_keyword.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
input_file: crates/move-compiler/tests/move_2024/parser/enum_keyword.move
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/enum_keyword.move:1:11
  │
1 │ module a::enum {}
  │           ^^^^
  │           │
  │           Unexpected 'enum'
  │           Expected an identifier
